# taskiq-pipelines

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
taskiq_pipelines/: __init__.py  abc.py  constants.py  exceptions.py  middleware.py  pipeliner.py
taskiq_pipelines/steps/: __init__.py  filter.py  mapper.py  sequential.py
taskiq_pipelines/tests/: test_stub.py
tests/: test_steps.py
